<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.alexkaz.pictureviewer.view.MainActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <RadioGroup
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="10dp">
            <RadioButton
                android:id="@+id/orderByNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:layout_marginRight="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:text="@string/new_"
                android:checked="true"
                android:textColor="#ffffff"
                android:onClick="changeListOrder"/>

            <RadioButton
                android:id="@+id/orderByOld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_weight="1"
                android:onClick="changeListOrder"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:text="@string/old"
                android:textColor="#ffffff" />

            <RadioButton
                android:id="@+id/orderByPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingStart="10dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:layout_weight="1"
                android:text="@string/popular"
                android:textColor="#ffffff"
                android:onClick="changeListOrder"/>
        </RadioGroup>
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_gravity="center_horizontal|center_vertical"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/noConnectionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible"
            android:layout_gravity="center_horizontal|center_vertical">
            <ImageView
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:src="@drawable/no_internet_ic"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#347DA9"
                android:paddingTop="30dp"
                android:text="No internet connection!"
                android:gravity="center_horizontal"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
