<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e1e1e1"
    tools:context="com.alexkaz.pictureviewer.view.impl.UserInfoActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_info_bg_height"
            android:scaleType="centerCrop"
            android:src="@drawable/user_info_bg"/>
        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="6dp"
                    app:cardUseCompatPadding="true"
                    android:layout_marginTop="4dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            tools:text="John Doe"
                            android:textStyle="bold"
                            android:gravity="center"
                            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="25dp"/>
                        <GridLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:columnCount="3"
                            android:rowCount="2"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_marginBottom="20dp">
                            <TextView
                                android:layout_height="25dp"
                                android:layout_width="90dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:text="@string/likes"
                                android:textSize="17sp"
                                android:background="#aae7e7e7"
                                android:layout_column="0"
                                android:layout_row="0"
                                android:layout_marginRight="2dp"
                                android:layout_marginEnd="2dp"
                                android:layout_marginBottom="2dp"/>
                            <TextView
                                android:id="@+id/userLikesCount"
                                android:layout_height="50dp"
                                android:layout_width="90dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:textSize="30sp"
                                tools:text="32"
                                android:background="#7fcaefc8"
                                android:layout_column="0"
                                android:layout_row="1"/>

                            <TextView
                                android:layout_height="25dp"
                                android:layout_width="90dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:textSize="17sp"
                                android:text="@string/photos"
                                android:background="#aae7e7e7"
                                android:layout_column="1"
                                android:layout_row="0"/>
                            <TextView
                                android:id="@+id/userPhotosCount"
                                android:layout_height="50dp"
                                android:layout_width="90dp"
                                android:gravity="center_horizontal|center_vertical"
                                tools:text="234"
                                android:textSize="30sp"
                                android:background="#7fcaefc8"
                                android:layout_column="1"
                                android:layout_row="1"/>
                            <TextView
                                android:layout_height="25dp"
                                android:layout_width="90dp"
                                android:gravity="center_horizontal|center_vertical"
                                android:textSize="17sp"
                                android:text="@string/collections"
                                android:background="#aae7e7e7"
                                android:layout_column="2"
                                android:layout_row="0"
                                android:layout_marginLeft="2dp"
                                android:layout_marginStart="2dp"/>
                            <TextView
                                android:id="@+id/userCollectionsCount"
                                android:layout_height="50dp"
                                android:layout_width="90dp"
                                android:gravity="center_horizontal|center_vertical"
                                tools:text="9"
                                android:textSize="30sp"
                                android:background="#7fcaefc8"
                                android:layout_marginLeft="2dp"
                                android:layout_marginStart="2dp"
                                android:layout_column="2"
                                android:layout_row="1"/>
                        </GridLayout>
                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <TextView
                                android:id="@+id/userBioLabel"
                                android:layout_width="100dp"
                                android:layout_height="wrap_content"
                                android:textAlignment="textEnd"
                                android:textSize="20sp"
                                android:textColor="#2c894b"
                                android:text="@string/bio"
                                android:gravity="end"
                                android:layout_marginLeft="10dp"
                                android:layout_marginStart="10dp"/>
                            <TextView
                                android:id="@+id/userBio"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:textColor="#565656"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_marginLeft="5dp"
                                android:layout_marginStart="5dp"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentEnd="true"
                                android:layout_toRightOf="@id/userBioLabel"
                                android:layout_toEndOf="@id/userBioLabel"
                                android:layout_alignTop="@id/userBioLabel"
                                tools:text="User biography"/>
                            <TextView
                                android:id="@+id/userLocation"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="20sp"
                                android:textColor="#565656"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="10dp"
                                android:layout_below="@id/userBio"
                                android:layout_alignLeft="@id/userBio"
                                android:layout_alignStart="@id/userBio"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                tools:text="New York"/>
                            <TextView
                                android:id="@+id/userLocationLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/location"
                                android:textAlignment="textEnd"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:gravity="end"
                                android:textSize="20sp"
                                android:textColor="#2c894b"
                                android:layout_alignLeft="@id/userBioLabel"
                                android:layout_alignStart="@id/userBioLabel"
                                android:layout_alignTop="@id/userLocation"
                                android:layout_toLeftOf="@id/userLocation"
                                android:layout_toStartOf="@id/userLocation"/>
                            <TextView
                                android:id="@+id/userPortfolioUrl"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:layout_marginEnd="10dp"
                                android:layout_marginBottom="20dp"
                                android:textColor="#565656"
                                tools:text="www.user-portfolio"
                                android:textSize="20sp"
                                android:autoLink="web"
                                android:layout_below="@id/userLocation"
                                android:layout_alignLeft="@id/userLocation"
                                android:layout_alignStart="@id/userLocation"/>
                            <TextView
                                android:id="@+id/userPortfolioUrlLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/portfolio"
                                android:textAlignment="textEnd"
                                android:gravity="end"
                                android:textSize="20sp"
                                android:textColor="#2c894b"
                                android:layout_marginRight="5dp"
                                android:layout_marginEnd="5dp"
                                android:layout_alignBaseline="@+id/userPortfolioUrl"
                                android:layout_alignBottom="@+id/userPortfolioUrl"
                                android:layout_toLeftOf="@+id/userPortfolioUrl"
                                android:layout_toStartOf="@+id/userPortfolioUrl"/>
                        </RelativeLayout>
                    </LinearLayout>
                </android.support.v7.widget.CardView>
            </FrameLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>
    <ImageView
        android:id="@+id/bigUserPhotoImgView"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:background="@drawable/rounded_bg"
        android:padding="4dp"
        android:layout_marginTop="@dimen/user_photo_margin_top"
        android:layout_gravity="center_horizontal"/>
</FrameLayout>
